--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,17 @@
     <link rel="stylesheet" href="./assets/css/responsive.css">
     <!-- modernizr JS -->
     <script src="./assets/js/vendor/modernizr-2.8.3.min.js"></script>
+
+    <style>
+      .iwSUvz {
+        width: 300px !important;
+      }
+
+      .iaVjHB {
+        margin-top: 10px !important;
+        font-size: 18px !important;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
